--- a/style.css
+++ b/style.css
@@ -96,3 +96,10 @@ body{
   color: #0bd60b;
 }
 
+.content{
+    text-align: center;
+    padding-top: 10%;
+    margin-bottom: 60px;
+    font-weight: 600;
+    position: relative;
+}
